@@ -1,3 +1,8 @@
+droplet-1.06（进行中）
+------------------------------------------------------------------------
+1.
+
+
 run-2.00（进行中）
 ------------------------------------------------------------------------
 1.全面弃用InstaPy
@@ -11,11 +16,15 @@ run-1.48
 3.在login流程中，增加对2-way authentication页面的支持
 4.将tag也作为pull提取内容的一部分。现在的--pull参数将自动提取目标脚本的tag信息
 5.在login流程中，用户每尝试一次输入账号密码，都及时在服务器中用最新的IG账号标记此脚本
+6.新增--disable-image参数，用于禁止加载图片
+7.新增在云服务器上对gui模式的支持。实现原理为在云上运行Xvfb服务
+8.从此版本开始，在开启gui模式的时候，可以通过插件来让chrome支持代理
 
 
-droplet-1.05（进行中）
+droplet-1.05
 ------------------------------------------------------------------------
 1.支持不使用代理进行login。新增一个参数--use-proxy来控制是否使用代理，默认为使用
+2.新增开机自动开启Xvfb服务以支持gui模式的脚本运行在云端
 
 
 run-1.47
